--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "rl-core"]
-	path = rl-core
+[submodule "rl_core"]
+	path = rl_core
 	url = git@software.ismll.uni-hildesheim.de:ISMLL-internal/rl-core.git
