--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "rl_core"]
 	path = rl_core
-	url = https://software.ismll.uni-hildesheim.de/werner/rl_al.git
+	url = https://software.ismll.uni-hildesheim.de/ISMLL-internal/rl-core.git
